--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
+<head lang="en">
+  <meta charset="UTF-8">
+  <title>Your First Webapp With React</title>
+  <link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <!-- <link href="assets/css/styles.css" type="text/css" rel="stylesheet" /> -->
 </head>
 <body>
-  <div id="root">
-    <!-- app rendered here -->
-  </div>
-  <div>
-    hahahaha
+
+  <div id="root" class="container">
+    App rendered here!
   </div>
 
   <!-- Including the Google Maps API and the GMaps library -->
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
+
+  <!-- Our compiled JavaScript source file -->
+  <!-- <script src="./compiled.js"></script> -->
+
 </body>
 </html>
