--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<div id="main" class="container">
 
 		<!-- The App will be rendered here -->
-		
+
 	</div>
 
 	<!-- Including the Google Maps API and the GMaps library -->
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyBiK2NEmy7VGzyKKWIDeDNoMXcKdj0IcN4"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
 
 	<!-- Our compiled JavaScript source file -->
